--- a/source/sass/base/_grid.scss
+++ b/source/sass/base/_grid.scss
@@ -1,34 +1,33 @@
 .wrapper {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-gap: 4vw;
+  grid-gap: 1vw;
   margin: 4vw;
   max-width: 100vw;
 }
 .wrapper > div {
   // border: 2px solid rgb(0,0,0);
   // background-color: rgba(0,0,0,0.1);
-  padding: 1vw;
+  // padding: $margin__small;
 }
 .header {
-  height: 1.5vmax;
   grid-column: 1 / 9;
   grid-row: 1;
 }
 .about {
-  grid-column: 1 / 3;
-  grid-row: 2;
-  @media screen and (max-width: $screen__small) {
-    grid-column: 1 / 9;
-    grid-row: 2;
-  }
-}
-.content { 
-  grid-column: 3 / 7;
+  grid-column: 5 / 9;
   grid-row: 2;
   @media screen and (max-width: $screen__small) {
     grid-column: 1 / 9;
     grid-row: 3;
+  }
+}
+.content { 
+  grid-column: 1 / 5;
+  grid-row: 2;
+  @media screen and (max-width: $screen__small) {
+    grid-column: 1 / 9;
+    grid-row: 2;
   }
 }
 .four {
