--- a/source/sass/base/_pygments.scss
+++ b/source/sass/base/_pygments.scss
@@ -1,7 +1,5 @@
 .highlight pre {
     font-family: 'Inconsolata', monospace;
-    font-size:1.5rem;
-    line-height: 2.1rem;
     margin: $margin__large 0;
     // padding: 32px;
     background: $color__black;
